# rust-svelte-todo

./: .gitignore  Makefile  docker-compose.yaml  merge-env.sh
rust-test/: .gitignore  Cargo.toml  Dockerfile  entrypoint.sh
rust-test/sql/: 01_users.sql  02_todos.sql
rust-test/src/: config.rs  db.rs  main.rs
rust-test/src/dto/: auth.rs  todo.rs
rust-test/src/handlers/: auth_handler.rs  mod.rs  system_handler.rs  todo_handler.rs
rust-test/src/models/: todo.rs  user.rs
rust-test/src/repositories/: mod.rs  todo_repo.rs  user_repo.rs
rust-test/src/routes/: mod.rs
rust-test/src/services/: auth_service.rs  todo_service.rs
rust-test/src/utils/: auth.rs  jwt.rs
svelte-test/: Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  vite.config.ts
svelte-test/src/: app.d.ts  hooks.server.ts
svelte-test/src/lib/components/: Navbar.svelte
svelte-test/src/lib/config/: api.ts
svelte-test/src/lib/server/api/: auth.ts  todos.ts  user.ts
svelte-test/src/lib/server/auth/: cookies.ts
svelte-test/src/lib/types/: auth.ts
svelte-test/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte
svelte-test/src/routes/login/: +page.server.ts  +page.svelte
svelte-test/src/routes/logout/: +page.server.ts
svelte-test/src/routes/register/: +page.server.ts  +page.svelte
svelte-test/src/routes/todos/: +page.server.ts  +page.svelte
