[package]
name = "rust-test"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = { version = "^10.2", default-features = false, features = ["rust_crypto", "use_pem"] }
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-rustls"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
